infra/configs/flux-operator/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-ui
  namespace: flux-system
spec:
  hostnames:
  - flux-ui.sandbox.internal
  parentRefs:
  - name: cilium-gtw
    namespace: kube-system
    sectionName: flux-ui
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-ui-tls
  namespace: flux-system
spec:
  hostnames:
  - flux-ui.sandbox.internal
  parentRefs:
  - name: cilium-gtw
    namespace: kube-system
    sectionName: flux-ui-tls
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: flux-operator
      namespace: flux-system
      port: 9080
